--- a/Batracking/web/pages/reportes/rQr.jrxml
+++ b/Batracking/web/pages/reportes/rQr.jrxml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.5.1.final using JasperReports Library version 6.5.1  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rQr" pageWidth="595" pageHeight="842" whenNoDataType="NoPages" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" whenResourceMissingType="Error" uuid="d58ac392-42cc-4a56-852e-e97a789efb30">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rQr" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" whenResourceMissingType="Error" uuid="d58ac392-42cc-4a56-852e-e97a789efb30">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="28"/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<parameter name="codigo" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[SELECT ent.ent_nombre,ent.id_entidad, pal.pall_codigo, prod.prod_codigo FROM entidad ent INNER JOIN producto prod ON ent.id_entidad = prod.id_entidad INNER JOIN pallet pal ON prod.id_pallet = pal.id_pallet WHERE ent.id_entidad = $P{codigo}]]>
+		<![CDATA[SELECT ent.ent_nombre,ent.id_entidad, pal.pall_codigo, prod.prod_codigo FROM entidad ent INNER JOIN producto prod ON ent.id_entidad = prod.id_entidad INNER JOIN pallet pal ON prod.id_pallet = pal.id_pallet WHERE pal.id_pallet = $P{codigo}]]>
 	</queryString>
 	<field name="ent_nombre" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
@@ -27,67 +26,62 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="79" splitType="Stretch">
+		<band height="70" splitType="Stretch">
 			<staticText>
-				<reportElement x="219" y="29" width="100" height="20" uuid="eb74d2f8-ea91-4037-85ff-6ba068758689"/>
+				<reportElement x="189" y="18" width="180" height="47" uuid="eb74d2f8-ea91-4037-85ff-6ba068758689"/>
 				<textElement>
-					<font isBold="true"/>
+					<font size="36" isBold="true"/>
 				</textElement>
-				<text><![CDATA[LISTA DE CÓDIGOS
+				<text><![CDATA[CÓDIGOS
 ]]></text>
 			</staticText>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="35" splitType="Stretch"/>
+		<band height="3" splitType="Stretch"/>
 	</pageHeader>
 	<columnHeader>
 		<band height="61" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="19" width="100" height="20" uuid="5202dadd-5a36-471b-af89-b2ff7329dcff"/>
+				<reportElement x="43" y="14" width="100" height="35" uuid="5202dadd-5a36-471b-af89-b2ff7329dcff"/>
 				<textElement>
-					<font isBold="true"/>
+					<font size="18" isBold="true"/>
 				</textElement>
-				<text><![CDATA[ENTIDAD:]]></text>
+				<text><![CDATA[PALLET:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="155" y="19" width="100" height="20" uuid="06046ded-bf16-47da-bc60-7473635fd244"/>
+				<reportElement x="121" y="14" width="352" height="35" uuid="06046ded-bf16-47da-bc60-7473635fd244"/>
 				<textElement>
-					<font isBold="true"/>
+					<font size="18" isBold="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{ent_nombre}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{pall_codigo}]]></textFieldExpression>
 			</textField>
+			<line>
+				<reportElement x="22" y="50" width="500" height="1" uuid="64ba6513-e7f0-488a-a00f-b688e794baa8"/>
+			</line>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="104" splitType="Stretch">
+		<band height="200" splitType="Stretch">
 			<image>
-				<reportElement x="0" y="0" width="100" height="100" uuid="1a13b5f4-6a25-4bd4-af71-290cabab0863"/>
+				<reportElement x="199" y="10" width="150" height="150" uuid="1a13b5f4-6a25-4bd4-af71-290cabab0863"/>
 				<imageExpression><![CDATA[com.google.zxing.client.j2se.MatrixToImageWriter.toBufferedImage(
     new com.google.zxing.qrcode.QRCodeWriter().encode(
            $F{prod_codigo}, com.google.zxing.BarcodeFormat.QR_CODE, 70, 70))]]></imageExpression>
 			</image>
 			<textField>
-				<reportElement x="255" y="11" width="100" height="20" uuid="472688f0-e75d-4ec0-81d5-5df3d14b3edf"/>
-				<textFieldExpression><![CDATA[$F{pall_codigo}]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="119" y="11" width="100" height="20" uuid="e7cb4671-5e42-4cf6-beed-a4ced73427ba"/>
+				<reportElement x="257" y="165" width="185" height="35" uuid="ac48eb6e-a52d-4002-b298-8157bc8af899"/>
 				<textElement>
-					<font isBold="true"/>
+					<font size="18"/>
 				</textElement>
-				<text><![CDATA[PALLET:]]></text>
-			</staticText>
-			<textField>
-				<reportElement x="255" y="52" width="100" height="20" uuid="ac48eb6e-a52d-4002-b298-8157bc8af899"/>
 				<textFieldExpression><![CDATA[$F{prod_codigo}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="119" y="52" width="100" height="20" uuid="fa778cdb-802f-43e3-816a-1f32eb6a898a"/>
+				<reportElement x="188" y="165" width="100" height="35" uuid="fa778cdb-802f-43e3-816a-1f32eb6a898a"/>
 				<textElement>
-					<font isBold="true"/>
+					<font size="18" isBold="true"/>
 				</textElement>
-				<text><![CDATA[CODIGO:]]></text>
+				<text><![CDATA[Código:]]></text>
 			</staticText>
 		</band>
 	</detail>
